Opened 17 years ago

Closed 17 years ago

#1531 closed bug (fixed)

sounds preferences not remembered after reboot

Reported by: cebif Owned by: marcusoverhagen
Priority: normal Milestone: R1
Component: Preferences/Sounds Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

If I copy some wav sounds to /boot/beos/etc/sounds, then apply wav sounds to events in Sounds preferences application, when I reboot the settings are lost. To reproduce: 1) Open Preferences/Sounds. 2)Assign a wav sound like BeStartup.wav to BeStartup. 3) Close the Sounds application. 4) Reboot On reboot the BeStartup.wav sound does not play. On openning Preferences Sounds the assigned sound is seen to be lost. This is reproduceable always. The version I was testing was: hrev22418 on its own partition.

Change History (1)

comment:1 by stippi, 17 years ago

Resolution: fixed
Status: newclosed

Fixed by Maurice Kalinowski in hrev24089.

Note: See TracTickets for help on using tickets.